Updated dependenices